# whisper

./: .gitignore  AGENTS.md  Cargo.toml  Justfile  README.md  TECH_DEBT.md  bee-project.yml  buildServer.json  deploy-frontend-to-souffle.sh  deploy-to-souffle.sh  install-bee.sh  install.sh  package.json  sync-to-souffle.sh
asr-synth/: Cargo.toml  sync-to-souffle.sh
asr-synth/crates/metal-candle/: .cargo_vcs_info.json  ARCHITECTURE.md  Cargo.toml  FERRIS_MIGRATION_PROMPT.md  LICENSE  NEXT_STEPS.md  PLAN.md  PLANNING_SESSION_COMPLETE.md  PR48_REVIEW_SUMMARY.md  README.md  RELEASE_v1.2.0_BENCHMARKS.md  ROADMAP.md  V1.3.1_TASK_BREAKDOWN.md  deny.toml
asr-synth/crates/metal-candle/benches/: embeddings_batch.rs  fused_lora_bench.rs  fused_lora_simple.rs  mlx_baseline.py  mps_matmul.rs
asr-synth/crates/metal-candle/docs/: BENCHMARK_CI.md  GITHUB_ISSUE_V1.3.1_APPLYADAPTER.md
asr-synth/crates/metal-candle/examples/: adapter_swap_demo.rs  embeddings_demo.rs  generate_text.rs  load_model.rs  lora_layer_bench.rs  streaming_demo.rs  train_lora.rs
asr-synth/crates/metal-candle/scripts/: update-metrics.sh
asr-synth/crates/metal-candle/tests/: async_execution.rs  custom_ops_correctness.rs  gradient_verification.rs  lazy_execution.rs  lora_dropout.rs  lora_lazy.rs  rmsnorm_correctness.rs  training_integration.rs
asr-synth/crates/peft-rs/examples/: save_load.rs
asr-synth/crates/peft-rs/src/: io.rs
asr-synth/crates/synth-corrupt/: Cargo.toml  README.md
asr-synth/crates/synth-corrupt/src/: corrupt.rs  features.rs  g2p.rs  main.rs
asr-synth/crates/synth-dashboard/: Cargo.toml
asr-synth/crates/synth-dashboard/src/: db.rs  jobs.rs  main.rs  prototype.rs  review.rs  tts.rs
asr-synth/crates/synth-dashboard/static/: index.html
asr-synth/crates/synth-parakeet/: Cargo.toml
asr-synth/crates/synth-parakeet/src/: main.rs
asr-synth/crates/synth-pipeline/: Cargo.toml
asr-synth/crates/synth-pipeline/src/: main.rs
asr-synth/crates/synth-qwen/: Cargo.toml
asr-synth/crates/synth-qwen/src/: main.rs
asr-synth/crates/synth-recorder/src/: main.rs
asr-synth/crates/synth-reviewer/src/: main.rs
asr-synth/crates/synth-textgen/: Cargo.toml
asr-synth/crates/synth-textgen/src/: main.rs  (+2 more)
asr-synth/crates/synth-train/: Cargo.toml
asr-synth/data/: output.jsonl  pronunciations.jsonl  real_corruption_map.jsonl  recording_sentences.jsonl  review.html  train.jsonl  train_2500.jsonl  vocab_review.csv
asr-synth/docs/: phonetic-retrieval-implementation-checklist.md  phonetic-retrieval-roadmap.md
asr-synth/scripts/: benchmark_cohere_asr.py  phone_decode_allophant.sh  phone_decode_powsm.py  phone_decode_zipa.py  phone_decode_zipa.sh  prototype_reranker_sidecar.py  qwen3_reranker_sidecar.py  qwen3_reranker_sidecar.sh
asr-synth/training/: eval_real_speech.py  gen_focused.py  serve_review.py  train.sh  train_byt5.py
beeml/crates/synth-pipeline/: Cargo.toml
qwen3-asr-mlx-rs/qwen3-asr-mlx-ffi/: Cargo.toml
qwen3-asr-mlx-rs/qwen3-asr-mlx-ffi/include/: qwen3_asr_ffi.h
qwen3-asr-mlx-rs/qwen3-asr-mlx-ffi/src/: lib.rs
qwen3-asr-rs/: Cargo.toml
qwen3-asr-rs/examples/: demo.rs  streaming_verify.rs  transcribe.rs
qwen3-asr-rs/qwen3-asr-ffi/: Cargo.toml
qwen3-asr-rs/qwen3-asr-ffi/include/: qwen3_asr_ffi.h
qwen3-asr-rs/qwen3-asr-ffi/src/: lib.rs
qwen3-asr-rs/scripts/: test-full-asr-pipeline.sh
qwen3-asr-rs/src/: config.rs  decoder.rs  encoder.rs  forced_aligner.rs  hub.rs  inference.rs  lib.rs  linear.rs  mel.rs  streaming.rs  tokenizer_build.rs  weights.rs
qwen3-asr-rs/tests/: dtype_mixed_regressions.rs  streaming_integration.rs
rust/bee-asr/: Cargo.toml
rust/bee-asr/src/: asr_engine.rs  forced_aligner.rs  lib.rs  streaming.rs
rust/bee-correct/: Cargo.toml
rust/bee-correct/src/: g2p.rs  judge.rs  lib.rs  sparse_ftrl.rs
rust/bee-ffi/: Cargo.toml  build.rs  cbindgen.toml
rust/bee-ffi/include/: bee_ffi.h  qwen3_asr_ffi.h
rust/bee-ffi/src/: correct.rs  engine.rs  lib.rs  session.rs  stats.rs
rust/bee-g2p/: Cargo.toml
rust/bee-g2p-charsiu-mlx/: Cargo.toml  README.md
rust/bee-g2p-charsiu-mlx/scripts/: benchmark.sh  benchmark_python.py  convert_to_safetensors.py  dump_reference.py
rust/bee-g2p-charsiu-mlx/src/: config.rs  engine.rs  lib.rs  load.rs  main.rs  model.rs  ownership.rs  test_helpers.rs  tests.rs  tokenize.rs
rust/bee-g2p/src/: lib.rs
rust/bee-kv/: Cargo.toml
rust/bee-kv/src/: alignment.rs  decode.rs  html.rs  main.rs  print.rs  tui.rs  types.rs  types2.rs
rust/bee-qwen3-asr/: Cargo.toml
rust/bee-qwen3-asr/src/: config.rs  decoder.rs  encoder.rs  forced_aligner.rs  generate.rs  lib.rs  load.rs  mel.rs  model.rs  mrope.rs
rust/bee-roll/: Cargo.toml  README.md
rust/bee-roll-readme/: Cargo.toml
rust/bee-roll-readme/scripts/: phonetic_timeline_demo.json  render_phonetic_compare.py  render_phonetic_layer_cake.py  render_phonetic_timeline.py
rust/bee-roll/scripts/: render_timeline.py  timeline_demo.json
rust/bee-roll/src/: audio.rs  cut_trace.rs  lib.rs  main.rs  tape.rs  tokenizer.rs  tokens.rs  transcript.rs  utterance.rs
rust/bee-roll/tests/: real_preview_snapshot.rs
rust/bee-rpc/: Cargo.toml
rust/bee-rpc/src/: lib.rs  main.rs
rust/bee-transcribe/: Cargo.toml
rust/bee-transcribe/src/: aligner.rs  asr.rs  audio_buffer.rs  audio_filter.rs  correct.rs  corrector.rs  decode_session.rs  g2p.rs  generator.rs  judge.rs  lib.rs  mlx_stuff.rs  rotation_plan.rs  session.rs  session_v2.rs  sparse_ftrl.rs  speech_gate.rs  structured_output.rs  text_buffer.rs  timing.rs  types.rs  wav_util.rs  zipa_align.rs
rust/bee-transcribe/tests/: charsiu_zipa_real.rs
rust/bee-vad/: Cargo.toml
rust/bee-vad/src/: lib.rs
rust/bee-zipa-mlx/: Cargo.toml
rust/bee-zipa-mlx/src/: artifacts.rs  audio.rs  config.rs  encoder.rs  error.rs  features.rs  infer.rs  lib.rs  load.rs  model.rs  tokenizer.rs
rust/beeml/: Cargo.toml
rust/beeml-pipeline/: Cargo.toml
rust/beeml/scripts/: kokoro_phonemes.py
rust/beeml/src/: judge.rs  kokoro_phonemes.rs  lib.rs  main.rs  offline_eval.rs  rapid_fire.rs  rpc.rs  rpc_impl.rs  service.rs  sparse_ftrl.rs  util.rs
(+863 files in other folders)
