[workspace]
resolver = "2"
members = [
  # one per line plz
  "rust/bee-rpc",
  "rust/bee-phonetic",
  "rust/beeml",
  "rust/bee-qwen3-asr",
  "rust/bee-vad",
  "rust/bee-correct",
  "rust/bee-transcribe",
  "rust/bee-ffi",
  "rust/bee-types",
]
exclude = ["mlx-rs", "rust/vendor/rspanphon"]

[workspace.dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
criterion = "0.5"
proptest = "1"
hound = "3.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
candle-core = "0.9.2"
candle-nn = "0.9.2"
safetensors = "0.6"
thiserror = "2"
tracing = "0.1"
qwen3-asr = "0.2.2"
mlx-rs = { path = "mlx-rs/mlx-rs", features = ["safetensors", "metal", "accelerate"] }
tokenizers = { version = "0.22", features = ["onig"] }

[workspace.lints.rust]
rust_2018_idioms = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_lifetimes = "warn"
