[workspace]
resolver = "2"
members = [
  # one per line plz
  "rust/bee-rpc",
  "rust/bee-phonetic",
  "rust/beeml",
  "rust/bee-zipa-mlx",
  "rust/bee-qwen3-asr",
  "rust/bee-g2p-charsiu",
  "rust/bee-g2p",
  "rust/bee-g2p-charsiu-mlx",
  "rust/bee-roll",
  "rust/bee-roll-readme",
  "rust/bee-kv",
  "rust/bee-vad",
  "rust/bee-correct",
  "rust/bee-transcribe",
  "rust/bee-ffi",
  "rust/bee-types",
]
exclude = ["mlx-rs", "rust/vendor/rspanphon"]

[workspace.dependencies]
anyhow = "1"
compact_str = "0.9"
ctrlc = "3.4"
hound = "3.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
mlx-rs = { path = "mlx-rs/mlx-rs", features = ["safetensors", "metal", "accelerate"] }
tokenizers = { version = "0.22", features = ["onig"] }

[workspace.lints.rust]
rust_2018_idioms = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_lifetimes = "warn"

[profile.release]
debug = "line-tables-only"
