[workspace]
resolver = "2"
members = [
    "crates/synth-tts",
    "crates/synth-parakeet",
    "crates/synth-qwen",
    "crates/synth-pipeline",
    "crates/synth-textgen",
    "crates/synth-recorder",
    "crates/synth-reviewer",
    "crates/synth-corrupt",
    "crates/peft-rs",
    "crates/synth-train",
    "crates/synth-dashboard",
]

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
hound = "3"
candle-core = "0.9.2"
candle-nn = "0.9.2"
safetensors = "0.4"
thiserror = "2"
tracing = "0.1"
criterion = "0.7"
proptest = "1.9"

[workspace.lints.clippy]
pedantic = "warn"

[patch.crates-io]
parakeet-rs = { path = "vendor/parakeet-rs" }
