[package]
name = "qwen3-asr-mlx-ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
qwen3-asr-mlx = { path = ".." }
mlx-rs = { path = "../../vendor/mlx-rs/mlx-rs", features = ["safetensors", "metal", "accelerate"] }
tokenizers = { version = "0.22", features = ["onig"] }
log = "0.4"
env_logger = "0.11"
dirs = "6"
serde_json = "1"
