[package]
name = "bee-correct"
version = "0.1.0"
edition = "2024"
description = "Core correction logic: judge, FTRL optimizer, G2P cache"
license = "MIT"

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[dependencies]
bee-types = { path = "../bee-types" }
bee-phonetic = { path = "../bee-phonetic" }
anyhow = { workspace = true }
espeak-ng = { version = "0.1.0", features = ["bundled-data-en"] }
fnv = "1.0"
tracing = { workspace = true }
