[package]
name = "bee-ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
bee-correct = { path = "../bee-correct" }
bee-phonetic = { path = "../bee-phonetic" }
bee-transcribe = { path = "../bee-transcribe" }
bee-types = { path = "../bee-types" }
bee-vad = { path = "../bee-vad" }
mlx-rs.workspace = true
facet-json = "0.44"
log = "0.4"
env_logger = "0.11"
serde_json = "1"
libc = "0.2"

[build-dependencies]
cbindgen = "0.28"
