[package]
name = "bee-ffi"
version = "0.1.0"
edition = "2021"

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[lib]
crate-type = ["cdylib"]

[dependencies]
bee-transcribe = { path = "../bee-transcribe" }
bee-types = { path = "../bee-types" }
bee-rpc = { path = "../bee-rpc" }
mlx-rs.workspace = true
facet-json = "0.44"
log = "0.4"
env_logger = "0.11"
serde_json = "1"
libc = "0.2"
vox = { path = "../../../vox/rust/vox", features = ["runtime"] }
vox-ffi = { path = "../../../vox/rust/vox-ffi" }
tokio = { version = "1", features = ["rt", "sync"] }
dashmap = "6"
ctor = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
strip-ansi-escapes = "0.2.1"

