[package]
name = "bee-g2p"
version = "0.1.0"
edition = "2024"

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[dependencies]
anyhow.workspace = true
bee-g2p-charsiu-mlx = { path = "../bee-g2p-charsiu-mlx" }
bee-phonetic = { path = "../bee-phonetic" }
bee-qwen3-asr = { path = "../bee-qwen3-asr" }
facet = "0.44.3"
regex = "1"
