[package]
name = "bee-kv"
version = "0.1.0"
edition = "2021"

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[dependencies]
anyhow.workspace = true
bee-phonetic = { path = "../bee-phonetic" }
bee-qwen3-asr = { path = "../bee-qwen3-asr" }
bee-transcribe = { path = "../bee-transcribe" }
bee-zipa-mlx = { path = "../bee-zipa-mlx" }
crossterm = "0.28"
ctrlc.workspace = true
ratatui = "0.29"
