[package]
name = "bee-transcribe"
version = "0.1.0"
edition = "2021"
description = "High-level streaming transcription built on bee-qwen3-asr"
license = "MIT"

[dependencies]
bee-qwen3-asr = { path = "../bee-qwen3-asr" }
bee-vad = { path = "../bee-vad" }
mlx-rs.workspace = true
tokenizers.workspace = true
facet = "0.44.3"
log = "0.4"
dirs = "6"
serde_json = "1"
