[package]
name = "bee-transcribe"
version = "0.1.0"
edition = "2021"
description = "High-level streaming transcription built on bee-qwen3-asr"
license = "MIT"

[dependencies]
bee-qwen3-asr = { path = "../bee-qwen3-asr" }
bee-vad = { path = "../bee-vad" }
mlx-rs.workspace = true
tokenizers.workspace = true
bee-types = { path = "../bee-types" }
bee-correct = { path = "../bee-correct" }
bee-phonetic = { path = "../bee-phonetic" }
bee-rpc = { path = "../bee-rpc" }
facet = "0.44.3"
facet-json = "0.44"
hound = "3"
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "6"
env_logger = "0.11"
serde_json = "1"
anyhow = "1"
thiserror.workspace = true

[[bin]]
name = "transcribe"
path = "src/bin/transcribe.rs"
