[package]
name = "bee-zipa-mlx"
version = "0.1.0"
edition = "2024"
description = "ZIPA inference via MLX on Apple Silicon"
license = "MIT"

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[dependencies]
anyhow.workspace = true
bee-correct = { path = "../bee-correct" }
bee-phonetic = { path = "../bee-phonetic" }
hound.workspace = true
mlx-rs.workspace = true
rustfft = "6"
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
