[package]
name = "beeml"
version = "0.1.0"
edition = "2024"
default-run = "beeml"

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[features]
default = ["server"]
server = ["dep:tokio", "dep:vox-core", "dep:vox-websocket"]

[[bin]]
name = "beeml"
path = "src/main.rs"
required-features = ["server"]

[[bin]]
name = "gen-ts-api"
path = "src/bin/gen-ts-api.rs"

[[bin]]
name = "regen-corpus"
path = "src/bin/regen-corpus.rs"

[dependencies]
bee-phonetic = { path = "../bee-phonetic" }
bee-qwen3-asr = { path = "../bee-qwen3-asr" }
bee-zipa-mlx = { path = "../bee-zipa-mlx" }
bee-transcribe = { path = "../bee-transcribe" }
anyhow = { workspace = true }
dirs = "5"
facet = "0.44.3"
facet-json = "0.44"
rayon = "1.10.0"
rand = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"], optional = true }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
vox = { path = "../../../vox/rust/vox", default-features = false, features = ["runtime"] }
vox-core = { path = "../../../vox/rust/vox-core", optional = true }
vox-websocket = { path = "../../../vox/rust/vox-websocket", optional = true }
vox-codegen = { path = "../../../vox/rust/vox-codegen" }
