[package]
name = "synth-train"
version = "0.1.0"
edition = "2024"

[features]
default = ["metal"]
metal = ["candle-core/metal"]

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
rand = "0.9"
ureq = { version = "3", features = ["json"] }

# In-process LLM inference (replaces mlx_lm.server subprocess)
candle-core = "0.9.2"
candle-nn = "0.9.2"
candle-transformers = "0.9.2"
tokenizers = { version = "0.22", features = ["onig"] }
hf-hub = "0.4"
tracing = "0.1"
peft-rs = { path = "../peft-rs" }
